--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,51 @@
+html {
+  font-family: Georgia, serif;
+  line-height: 1.5;
+}
 
-.current {
-  background-color: #cc1465;
+header {
+  background-color: #ffe500;
+}
+
+h1, h2 {
+  font-family: Sigmar One, sans-serif;
+  color: #b20953;
+}
+
+h1 {
+  font-size: 3rem;
+}
+
+h1 {
+  font-size: 1.875rem;
+}
+
+ul {
+  list-style: none;
+}
+
+nav a {
+  text-decoration: none;
+  color: #fff;
+  background-color: #b2a212;
+}
+nav a:hover {
+  al
+  color: #cc1465;
+}
+nav .current {
+  background-color: #b20953;
+}
+
+img {
+  width: 100%;
+}
+
+main {
+  font-size: 1.125rem;
+}
+
+footer {
+  background-color: #ffe500;
+  font-size: .75rem;
 }
