--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ html {
 
 body {
   vertical-align: center;
-  margin: auto;
+  margin: 0;
 }
 
 *, *::before, *::after {
@@ -15,15 +15,19 @@ body {
 
 header {
   background-color: #ffe500;
+  margin: 0;
+  padding: 0 0 .75em;
 }
 
 h1, h2 {
   font-family: "Sigmar One", sans-serif;
   display: block;
   color: #b20953;
+  padding: 0 .75em;
 }
 
 h1 {
+  margin: 0;
   text-align: center;
   font-size: 3rem;
 }
@@ -36,17 +40,21 @@ h2 {
 ul {
   list-style-type: none;
   text-align: center;
+  margin: 0;
 }
 
 nav li {
   display: inline-block;
   text-align: center;
+  font-size: 1.125rem;
 }
 
 nav a {
   text-decoration: none;
   color: #fff;
   background-color: #b2a212;
+  padding: .2em .5em .3em;
+  border-radius: 4px;
 }
 
 nav a:hover {
@@ -63,13 +71,13 @@ img {
 }
 
 main {
-  font-size: 1.125rem;
   color: #2f2d13;
 }
 
 footer {
   background-color: #ffe500;
-  font-size: .75rem;
+  color: #2f2d13;
   display: block;
   text-align: center;
+  padding: .75em;
 }
