--- a/css/main.css
+++ b/css/main.css
@@ -28,9 +28,10 @@ h1, h2 {
 
 h1 {
   margin: 0;
+  padding: 0 .75em;
   text-align: center;
   font-size: 3rem;
-  font-weight: 100;
+  font-weight: 50;
 }
 
 h2 {
@@ -42,7 +43,7 @@ h2 {
 ul {
   list-style-type: none;
   text-align: center;
-  margin: 0;
+  margin: .3em 0 0;
   padding: 0;
 }
 
@@ -56,6 +57,7 @@ nav a {
   text-decoration: none;
   color: #fff;
   background-color: #b2a212;
+  margin: .3em 0;
   padding: .2em .5em .3em;
   border-radius: 4px;
 }
@@ -75,7 +77,7 @@ img {
 
 main {
   color: #2f2d13;
-  margin: .3em;
+  margin: 0;
   padding: 0 .75em;
 }
 
