--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@ html {
 body {
   vertical-align: center;
   margin: 0;
+  padding: 0;
 }
 
 *, *::before, *::after {
@@ -49,7 +50,10 @@ ul {
 nav li {
   display: inline-block;
   text-align: center;
+  font-weight: 100;
   font-size: 1.125rem;
+  padding: 0;
+  margin: 0;
 }
 
 nav a {
